Added print and summary methods for prevalence class

--- a/changes.Rmd
+++ b/changes.Rmd
@@ -505,10 +505,24 @@ prev_obj <- prev_dev()
 prevalence_by_age(dist = prev_obj$post, registry_end_year=9, N_years=10, age_intervals=c(18, 50, 80))
 ```
 
+# Utility Functions
+
+I've also added in `print` and `summary` methods for the `prevalence` object, found in `utils.R`.
+
+```{r}
+obj <- prev_dev()
+print(obj)
+```
+
+```{r}
+summary(obj)
+```
+
 # Further Work
 
 There are still several areas that can be improved:
   + Have the population data loaded into the namespace with the `data()` function so it can be accessed by `prevalence()` rather than having to explicitly load it (and encounter path difficulties). Just like when packages come with datasets they can be loaded with `data(<name>)`
   + It could be worth further optimising the bootstrapping function, although this would be challenging as it would require the pre-processing currently done in `survreg.fit` to be implemented in C++.
   + The package doesn't load dependent libraries (such as survival, dplyr etc...), despite being listed in the DESCRIPTION file. Is there another file where libraries to be loaded should be specified?
+  + Improve the `print` and `summary` methods of `prevalence` after receiving feedback
   + I haven't looked at the functions in `diagnostics.R` yet
